Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhAD7or5gioV/79nl6aErC",
+      "authorship_tag": "ABX9TyMQtvbmDL5d/OikTa/qf4R3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,33 +28,39 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hGm2x-JRqV46",
-        "colab_type": "text"
+        "id": "hGm2x-JRqV46"
       },
       "source": [
         "# メモ\n",
-        "\n",
-        "Colab で CSS を勉強する。%%html を使う。\n",
-        "\n",
-        "コマンドセルの中では ```<link rel=\"stylesheet\" href=\"styles.css\">``` でスタイルシートを読み込めないみたいなので、セルの中に記述することになる。\n",
-        "\n",
-        "つまり `<style></style>` で書く。\n",
-        "\n",
-        "するとコードセルがムダに長くなるが、飛ばして読んでくれ。解説は別途加える。"
+        "1. Colab で CSS を勉強する。%%html を使う。\n",
+        "1. コマンドセルの中では ```<link rel=\"stylesheet\" href=\"styles.css\">``` でスタイルシートを読み込めないみたいなので、セルの中に記述することになる。つまり `<style></style>` で書く。\n",
+        "1. 参考サイト  \n",
+        "https://developer.mozilla.org/ja/docs/Learn/CSS/First_steps/Getting_started\n",
+        "  \n",
+        "  https://developer.mozilla.org/ja/docs/Learn/CSS/First_steps/Getting_started"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-4ZXCrA0sl76"
+      },
+      "source": [
+        "# はじめに少し実験"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "TKWgq8sXq7tD",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 99
         },
-        "outputId": "3a1aac66-dc23-4656-f8da-882374a4f23e"
+        "outputId": "2cd89171-cd7c-4d2a-a5d0-bf26d3a715f8"
       },
       "source": [
+        "# こんな感じになる style と本体だけ\n",
         "%%html\n",
         "<style>\n",
         "h1 {\n",
@@ -69,12 +75,10 @@
         "}\n",
         "</style>\n",
         "\n",
-        "<body>\n",
         "<h1>大見出し</h1>\n",
-        "<p>中身の文章つらつら</p>\n",
-        "</body>"
+        "<p>中身の文章つらつら</p>\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -93,10 +97,80 @@
               "}\n",
               "</style>\n",
               "\n",
-              "<body>\n",
               "<h1>大見出し</h1>\n",
-              "<p>中身の文章つらつら</p>\n",
-              "</body>"
+              "<p>中身の文章つらつら</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p-7gvKWturur",
+        "outputId": "5c85c94a-3554-4b2b-85ed-d7aefb92da15",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    body {\n",
+        "        color: blue;\n",
+        "    }\n",
+        "    h1 {\n",
+        "  color: red;\n",
+        "}\n",
+        "</style>\n",
+        "</style>\n",
+        "<h1>見出し１です</h1>\n",
+        "\n",
+        "<p>これは第一段落の文です。この文には <span>span 要素</span>\n",
+        "    と<a href=\"http://example.com\">リンク</a>が含まれます。</p>\n",
+        "\n",
+        "<p>これは第二段落の文です。この文には <em>em 要素</em>が含まれます。</p>\n",
+        "\n",
+        "<ul>\n",
+        "    <li>一つ目の項目</li>\n",
+        "    <li>二つ目の項目</li>\n",
+        "    <li><strong>三つ目</strong>の項目</li>\n",
+        "</ul>"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    body {\n",
+              "        color: blue;\n",
+              "    }\n",
+              "    h1 {\n",
+              "  color: red;\n",
+              "}\n",
+              "</style>\n",
+              "</style>\n",
+              "<h1>見出し１です</h1>\n",
+              "\n",
+              "<p>これは第一段落の文です。この文には <span>span 要素</span>\n",
+              "    と<a href=\"http://example.com\">リンク</a>が含まれます。</p>\n",
+              "\n",
+              "<p>これは第二段落の文です。この文には <em>em 要素</em>が含まれます。</p>\n",
+              "\n",
+              "<ul>\n",
+              "    <li>一つ目の項目</li>\n",
+              "    <li>二つ目の項目</li>\n",
+              "    <li><strong>三つ目</strong>の項目</li>\n",
+              "</ul>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -111,8 +185,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LuVSyDnL7tFU",
-        "colab_type": "text"
+        "id": "LuVSyDnL7tFU"
       },
       "source": [
         "# ボックスモデル\n",
@@ -128,7 +201,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "zCtJErLX8C9H",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -169,7 +241,7 @@
         "</header>\n",
         "</body>"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -220,8 +292,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YzswA_0bJPNg",
-        "colab_type": "text"
+        "id": "YzswA_0bJPNg"
       },
       "source": [
         "# センタリング\n",
@@ -235,7 +306,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "0ogXEDofJMN7",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 99
@@ -272,7 +342,7 @@
         "</header>\n",
         "</body>"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -319,8 +389,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6ii7MmSAIyEy",
-        "colab_type": "text"
+        "id": "6ii7MmSAIyEy"
       },
       "source": [
         "# Flexbox\n",
@@ -334,7 +403,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "ILQgBYdoJkkm",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
@@ -372,7 +440,7 @@
         "</header>\n",
         "</body>"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -420,8 +488,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_3FfqBZ1LHjX",
-        "colab_type": "text"
+        "id": "_3FfqBZ1LHjX"
       },
       "source": [
         "# 画像の角を丸くする\n",
@@ -434,8 +501,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "29jx73DEbojp",
-        "colab_type": "text"
+        "id": "29jx73DEbojp"
       },
       "source": [
         ""
