--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZ2FJa4p1jIGJ/T9BqcjRX",
+      "authorship_tag": "ABX9TyOlx+0A4WmSmjV1y7iM/OdA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3815,7 +3815,7 @@
         "%%%html\n",
         "<style>html {font-family: sans-serif;}table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}</style>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3943,11 +3943,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XceIhfKaciJq",
-        "outputId": "66be3f72-bfcf-45ad-db70-21360bb5594c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        }
+        },
+        "outputId": "66be3f72-bfcf-45ad-db70-21360bb5594c"
       },
       "source": [
         "%%html\n",
@@ -3991,7 +3991,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4051,11 +4051,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "TLXh7UIMiduD",
-        "outputId": "c8ebe73e-f6d2-414a-8c61-541e4093352b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
-        }
+        },
+        "outputId": "c8ebe73e-f6d2-414a-8c61-541e4093352b"
       },
       "source": [
         "%%html\n",
@@ -4089,7 +4089,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4139,11 +4139,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "pbD6YLVWjyol",
-        "outputId": "29cbfcd6-e3fc-4a72-9c66-2de8da98c38e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
-        }
+        },
+        "outputId": "29cbfcd6-e3fc-4a72-9c66-2de8da98c38e"
       },
       "source": [
         "%%html\n",
@@ -4212,7 +4212,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4296,10 +4296,225 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "8M8L4T7ESpWk"
+      },
+      "source": [
+        "## 表にキャプションをつける"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1sz7m-SlR44w",
+        "outputId": "f6030625-2330-4455-9e2b-7be07327d6f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>    html {        font-family: sans-serif;    }    table {        border-collapse: collapse;        border: 2px solid rgb(200, 200, 200);        letter-spacing: 1px;        font-size: 0.8rem;    }    td,    th {        border: 1px solid rgb(190, 190, 190);        padding: 10px 20px;    }    td {        text-align: center;    }    caption {        padding: 10px;    }</style>\n",
+        "\n",
+        "<table>\n",
+        "    <caption>ジュラ紀の恐竜</caption>\n",
+        "    <tr>\n",
+        "        <td>&nbsp;</td>\n",
+        "        <th scope=\"col\">兄</th>\n",
+        "        <th scope=\"col\">弟</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <th scope=\"row\">アルファ</th>\n",
+        "        <td>キアヌ</td>\n",
+        "        <td>トム</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <th scope=\"row\">ベータ</th>\n",
+        "        <td>ハリソン</td>\n",
+        "        <td>ジュード</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <th scope=\"row\">オメガ</th>\n",
+        "        <td>ジェイク</td>\n",
+        "        <td>デンゼル</td>\n",
+        "    </tr>\n",
+        "</table>"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>    html {        font-family: sans-serif;    }    table {        border-collapse: collapse;        border: 2px solid rgb(200, 200, 200);        letter-spacing: 1px;        font-size: 0.8rem;    }    td,    th {        border: 1px solid rgb(190, 190, 190);        padding: 10px 20px;    }    td {        text-align: center;    }    caption {        padding: 10px;    }</style>\n",
+              "\n",
+              "<table>\n",
+              "    <caption>ジュラ紀の恐竜</caption>\n",
+              "    <tr>\n",
+              "        <td>&nbsp;</td>\n",
+              "        <th scope=\"col\">兄</th>\n",
+              "        <th scope=\"col\">弟</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <th scope=\"row\">アルファ</th>\n",
+              "        <td>キアヌ</td>\n",
+              "        <td>トム</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <th scope=\"row\">ベータ</th>\n",
+              "        <td>ハリソン</td>\n",
+              "        <td>ジュード</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <th scope=\"row\">オメガ</th>\n",
+              "        <td>ジェイク</td>\n",
+              "        <td>デンゼル</td>\n",
+              "    </tr>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4dCTbGvUTa5E",
+        "outputId": "5146f312-f01c-40de-ddca-61856a80911c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 331
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "html {    font-family: sans-serif;  }    table {    border-collapse: collapse;    border: 2px solid rgb(200,200,200);    letter-spacing: 1px;    font-size: 0.8rem;  }    td, th {    border: 1px solid rgb(190,190,190);    padding: 10px 20px;  }    th {    background-color: rgb(235,235,235);  }    td {    text-align: center;  }    tr:nth-child(even) td {    background-color: rgb(250,250,250);  }    tr:nth-child(odd) td {    background-color: rgb(245,245,245);  }    caption {    padding: 10px;  }\n",
+        "</style>\n",
+        "\n",
+        "<h1>My spending record</h1>\n",
+        "\n",
+        "<table>\n",
+        "    <caption>How I chose to spend my money</caption>\n",
+        "    <tr>\n",
+        "        <th>Purchase</th>\n",
+        "        <th>Location</th>\n",
+        "        <th>Date</th>\n",
+        "        <th>Evaluation</th>\n",
+        "        <th>Cost (€)</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>SUM</td>\n",
+        "        <td>118</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Haircut</td>\n",
+        "        <td>Hairdresser</td>\n",
+        "        <td>12/09</td>\n",
+        "        <td>Great idea</td>\n",
+        "        <td>30</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Lasagna</td>\n",
+        "        <td>Restaurant</td>\n",
+        "        <td>12/09</td>\n",
+        "        <td>Regrets</td>\n",
+        "        <td>18</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Shoes</td>\n",
+        "        <td>Shoeshop</td>\n",
+        "        <td>13/09</td>\n",
+        "        <td>Big regrets</td>\n",
+        "        <td>65</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "        <td>Toothpaste</td>\n",
+        "        <td>Supermarket</td>\n",
+        "        <td>13/09</td>\n",
+        "        <td>Good</td>\n",
+        "        <td>5</td>\n",
+        "    </tr>\n",
+        "</table>"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "html {    font-family: sans-serif;  }    table {    border-collapse: collapse;    border: 2px solid rgb(200,200,200);    letter-spacing: 1px;    font-size: 0.8rem;  }    td, th {    border: 1px solid rgb(190,190,190);    padding: 10px 20px;  }    th {    background-color: rgb(235,235,235);  }    td {    text-align: center;  }    tr:nth-child(even) td {    background-color: rgb(250,250,250);  }    tr:nth-child(odd) td {    background-color: rgb(245,245,245);  }    caption {    padding: 10px;  }\n",
+              "</style>\n",
+              "\n",
+              "<h1>My spending record</h1>\n",
+              "\n",
+              "<table>\n",
+              "    <caption>How I chose to spend my money</caption>\n",
+              "    <tr>\n",
+              "        <th>Purchase</th>\n",
+              "        <th>Location</th>\n",
+              "        <th>Date</th>\n",
+              "        <th>Evaluation</th>\n",
+              "        <th>Cost (€)</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <td>SUM</td>\n",
+              "        <td>118</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <td>Haircut</td>\n",
+              "        <td>Hairdresser</td>\n",
+              "        <td>12/09</td>\n",
+              "        <td>Great idea</td>\n",
+              "        <td>30</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <td>Lasagna</td>\n",
+              "        <td>Restaurant</td>\n",
+              "        <td>12/09</td>\n",
+              "        <td>Regrets</td>\n",
+              "        <td>18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <td>Shoes</td>\n",
+              "        <td>Shoeshop</td>\n",
+              "        <td>13/09</td>\n",
+              "        <td>Big regrets</td>\n",
+              "        <td>65</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "        <td>Toothpaste</td>\n",
+              "        <td>Supermarket</td>\n",
+              "        <td>13/09</td>\n",
+              "        <td>Good</td>\n",
+              "        <td>5</td>\n",
+              "    </tr>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "aX00Gt8Z2SMp"
       },
       "source": [
-        "https://developer.mozilla.org/ja/docs/Learn/HTML/Tables/Basics"
+        "https://developer.mozilla.org/ja/docs/Learn/HTML/Tables/Advanced"
       ]
     },
     {
