Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPf0Ix01IrKjodJk1AP0Vug",
+      "authorship_tag": "ABX9TyP1k6zRqZXJ4a7ZdjsMZmGT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,7 +211,7 @@
         "    <li>Item <em>three</em></li>\n",
         "</ul>"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,7 +781,7 @@
         "</style>\n",
         "<div class=\"box\"></div>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -834,7 +834,7 @@
         "</style>\n",
         "<p>Hello @ media</p>"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -915,10 +915,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 341
+          "height": 372
         },
         "id": "g8XgnIjndpO9",
-        "outputId": "73df7a1f-3405-45cd-ffcb-02773cea782b"
+        "outputId": "f9951992-01fc-4658-8c92-53618bf4dda6"
       },
       "source": [
         "%%html\n",
@@ -946,8 +946,7 @@
         "\n",
         "    /* DOM で入れ子になっている特定の要素を処理する。 */\n",
         "    /* -------------------------------------------------------------------------------------------- */\n",
-        "    div.special p,\n",
-        "    #id:first-line {\n",
+        "    div.special p, #id:first-line {\n",
         "        background-color: red;\n",
         "        border-radius: 30px;\n",
         "    }\n",
@@ -962,18 +961,18 @@
         "        padding-top: 0;\n",
         "        padding-bottom: 0;\n",
         "    }\n",
-        "\n",
         "</style>\n",
         "<div class=\"special\">divによる一行目\n",
         "    <p>pによる一行目</p>\n",
         "    <p>二行目</p>\n",
         "    <p>三行目</p>\n",
+        "    <div>divによる四行目</div>\n",
         "</div>\n",
         "<p>divの外の一行目</p>\n",
         "<p>二行目</p>\n",
         "<p class=\"special\">三行目</p>\n"
       ],
-      "execution_count": 40,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1003,8 +1002,7 @@
               "\n",
               "    /* DOM で入れ子になっている特定の要素を処理する。 */\n",
               "    /* -------------------------------------------------------------------------------------------- */\n",
-              "    div.special p,\n",
-              "    #id:first-line {\n",
+              "    div.special p, #id:first-line {\n",
               "        background-color: red;\n",
               "        border-radius: 30px;\n",
               "    }\n",
@@ -1019,16 +1017,71 @@
               "        padding-top: 0;\n",
               "        padding-bottom: 0;\n",
               "    }\n",
-              "\n",
               "</style>\n",
               "<div class=\"special\">divによる一行目\n",
               "    <p>pによる一行目</p>\n",
               "    <p>二行目</p>\n",
               "    <p>三行目</p>\n",
+              "    <div>divによる四行目</div>\n",
               "</div>\n",
               "<p>divの外の一行目</p>\n",
               "<p>二行目</p>\n",
               "<p class=\"special\">三行目</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5UHFB-lXkDMP",
+        "outputId": "d8b46fbd-0059-4da9-eea2-29404b3cf981",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        }
+      },
+      "source": [
+        "# first-line の実験 => \"p, #id:first-line\" がわからない\n",
+        "%%html\n",
+        "<style>\n",
+        "/*  p:first-line { // pの中の<br>より前だけ赤くなる\n",
+        "    #id:first-line {  // 機能しない */\n",
+        "    p, #id:first-line {  /* p が全部赤くなる */\n",
+        "        color: red;\n",
+        "    }\n",
+        "</style>\n",
+        "<p>さきちん絵はがきの紹介<br>\n",
+        "    さきちん絵はがきは、無料で各種テンプレートがダウンロードできるWebサイトです。</p>\n",
+        "\n",
+        "<p>年賀状や暑中・寒中見舞い、四季の絵はがきなどがあります。<br>特に人気なのが年賀状。多くの方が見てくださってます。感謝♪</p>"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "/*  p:first-line { // pの中の<br>より前だけ赤くなる\n",
+              "    #id:first-line {  // 機能しない */\n",
+              "    p, #id:first-line {  /* p が全部赤くなる */\n",
+              "        color: red;\n",
+              "    }\n",
+              "</style>\n",
+              "<body>\n",
+              "<p>さきちん絵はがきの紹介<br>\n",
+              "    さきちん絵はがきは、無料で各種テンプレートがダウンロードできるWebサイトです。</p>\n",
+              "\n",
+              "<p>年賀状や暑中・寒中見舞い、四季の絵はがきなどがあります。<br>特に人気なのが年賀状。多くの方が見てくださってます。感謝♪</p>\n",
+              "</body>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -1047,7 +1100,7 @@
       },
       "source": [
         "# いまここ\n",
-        "https://developer.mozilla.org/ja/docs/Learn/CSS/First_steps/How_CSS_is_structured#Applying_CSS_to_HTML\n"
+        "https://developer.mozilla.org/ja/docs/Learn/CSS/First_steps/How_CSS_works\n"
       ]
     },
     {
