Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMLCPSs2m0IdE3ClPoKjryD",
+      "authorship_tag": "ABX9TyMwf/HPxoHeDAJrKsvPQndj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2426,12 +2426,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UxRktP-a8BER",
-        "outputId": "2ac1eae1-35a2-4fff-a554-3e9bf4529ff7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
-        }
+        },
+        "id": "UxRktP-a8BER",
+        "outputId": "2ac1eae1-35a2-4fff-a554-3e9bf4529ff7"
       },
       "source": [
         "# セレクター演算\n",
@@ -2507,6 +2507,163 @@
               "    This won't get styled — it also needs to have the notebox class\n",
               "</div>\n",
               "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GZwQkvoDSqZ6",
+        "outputId": "ae8794d5-b20e-4560-f5c1-e522f015446a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        }
+      },
+      "source": [
+        "# ID セレクターは #\n",
+        "%%html\n",
+        "<style>\n",
+        "    #one {\n",
+        "        background-color: yellow;\n",
+        "    }\n",
+        "\n",
+        "    h1#heading {\n",
+        "        color: rebeccapurple;\n",
+        "    }\n",
+        "</style>\n",
+        "<h1 id=\"heading\">ID selector</h1>\n",
+        "<p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo\n",
+        "    melon azuki bean garlic.</p>\n",
+        "\n",
+        "<p id=\"one\">Gumbo beet greens corn soko <strong>endive</strong> gumbo gourd. Parsley shallot courgette tatsoi pea\n",
+        "    sprouts fava bean collard\n",
+        "    greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    #one {\n",
+              "        background-color: yellow;\n",
+              "    }\n",
+              "\n",
+              "    h1#heading {\n",
+              "        color: rebeccapurple;\n",
+              "    }\n",
+              "</style>\n",
+              "<h1 id=\"heading\">ID selector</h1>\n",
+              "<p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo\n",
+              "    melon azuki bean garlic.</p>\n",
+              "\n",
+              "<p id=\"one\">Gumbo beet greens corn soko <strong>endive</strong> gumbo gourd. Parsley shallot courgette tatsoi pea\n",
+              "    sprouts fava bean collard\n",
+              "    greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oO_D6qdcUYpW"
+      },
+      "source": [
+        "# 値のセレクター\n",
+        "%%script false\n",
+        "[attr] a[title] 属性名が一致\n",
+        "[attr=value] a[href=\"https://example.com\"] 属性の値が完全一致\n",
+        "[attr~=value] p[class~=\"special\"] 複数の値の一つに一致\n",
+        "[attr|=value] div[lang|=\"zh\"] 値がvalueか、valueの直後にハイフンが続くと一致"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yfyNEDDLUyBQ",
+        "outputId": "66d675aa-e3da-4aab-bf91-700d45765a0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<style>\n",
+        "    li[class] {\n",
+        "        font-size: 200%;\n",
+        "    }\n",
+        "\n",
+        "    li[class=\"a\"] {\n",
+        "        background-color: yellow;\n",
+        "    }\n",
+        "\n",
+        "    li[class~=\"a\"] {\n",
+        "        color: red;\n",
+        "    }\n",
+        "    li[class|=\"zh\"] {\n",
+        "        color: green;\n",
+        "    }\n",
+        "</style>\n",
+        "<h1>Attribute presence and value selectors</h1>\n",
+        "<ul>\n",
+        "    <li>Item 1</li>\n",
+        "    <li class=\"a\">Item 2</li>\n",
+        "    <li class=\"a b\">Item 3</li>\n",
+        "    <li class=\"ab\">Item 4</li>\n",
+        "    <li class=\"zh-ja\">Item 5</li>\n",
+        "</ul>\n"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    li[class] {\n",
+              "        font-size: 200%;\n",
+              "    }\n",
+              "\n",
+              "    li[class=\"a\"] {\n",
+              "        background-color: yellow;\n",
+              "    }\n",
+              "\n",
+              "    li[class~=\"a\"] {\n",
+              "        color: red;\n",
+              "    }\n",
+              "    li[class|=\"zh\"] {\n",
+              "        color: green;\n",
+              "    }\n",
+              "</style>\n",
+              "<h1>Attribute presence and value selectors</h1>\n",
+              "<ul>\n",
+              "    <li>Item 1</li>\n",
+              "    <li class=\"a\">Item 2</li>\n",
+              "    <li class=\"a b\">Item 3</li>\n",
+              "    <li class=\"ab\">Item 4</li>\n",
+              "    <li class=\"zh-ja\">Item 5</li>\n",
+              "</ul>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
