--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjWw1SEv23TD96OCFFfbfY",
+      "authorship_tag": "ABX9TyOrLLHvb/QCcu3ffA5wrrci",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2988,11 +2988,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Z6QSRJCFC9O0",
-        "outputId": "de476473-862d-4d56-a1e6-cc47a5b32b53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "outputId": "de476473-862d-4d56-a1e6-cc47a5b32b53"
       },
       "source": [
         "# 疑似要素は ::first-line のようにダブルコロンで始まる。\n",
@@ -3012,7 +3012,7 @@
         "        greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>\n",
         "</article>"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3062,11 +3062,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "sGeSUyEAGo6U",
-        "outputId": "32505eb6-bfb6-4a87-c536-96cc0ac65126",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 62
-        }
+        },
+        "outputId": "32505eb6-bfb6-4a87-c536-96cc0ac65126"
       },
       "source": [
         "# 疑似要素 ::before と ::after\n",
@@ -3080,7 +3080,7 @@
         "\n",
         "<p class=\"box\">Content in the box in my HTML page.</p>"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3109,11 +3109,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "-d-erC19HEKD",
-        "outputId": "7f576a74-4783-4022-a595-7bb74d4a47c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
-        }
+        },
+        "outputId": "7f576a74-4783-4022-a595-7bb74d4a47c4"
       },
       "source": [
         "%%html\n",
@@ -3125,7 +3125,7 @@
         "\n",
         "<p class=\"box\">Content in the box in my HTML page.</p>"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3153,11 +3153,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y6ATBM9uHZKC",
-        "outputId": "71aedd80-73ad-4854-85ca-12017c6d29f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 148
-        }
+        },
+        "outputId": "71aedd80-73ad-4854-85ca-12017c6d29f5"
       },
       "source": [
         "%%html\n",
@@ -3174,7 +3174,7 @@
         "\n",
         "<p class=\"box\">Content in the box in my HTML page.</p>"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3206,90 +3206,120 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "39bLegX1F7PT",
-        "outputId": "17165aad-62c9-4647-f616-a85a4c2da408",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 77
-        }
+        "id": "10RylAj3bmWa"
       },
       "source": [
+        "%%script false\n",
+        "%%script false\n",
+        "疑似クラス\n",
+        ":active アクティブ化（たとえばクリック）すると一致\n",
+        ":any-link :link と :visited 状態の両方に一致\n",
+        ":blank 空の<input> 要素に一致\n",
+        ":checked 選択状態のボタンに一致\n",
+        ":current 現在表示されている要素と一致\n",
+        ":default 類似要素のセットの中でデフォルトであるUI要素に一致\n",
+        ":dir HTML dir 属性またはCSS direction プロパティの値に基づいて要素を選択\n",
+        ":disabled 無効な状態のUI要素に一致\n",
+        ":empty オプションの空白以外の子を持たない要素に一致\n",
+        ":enabled 有効な状態のUI要素に一致\n",
+        ":first 最初のページと一致\n",
+        ":first-child 最初にある要素に一致\n",
+        ":first-of-type 最初にある特定のタイプの要素に一致\n",
+        ":focus フォーカスがあるときに一致\n",
+        ":focus-visible 要素にフォーカスがあり、表示される場合に一致\n",
+        ":focus-within フォーカスを持つ要素と、子孫を持つ要素に一致\n",
+        ":future 現在の要素の後の要素に一致\n",
+        ":hover ユーザーが要素にカーソルを合わせると一致\n",
+        ":indeterminate 値が不確定な状態のUI要素、通常はチェックボックスに一致\n",
+        ":in-range 範囲制限を持つ要素で、要素の値が範囲内にある場合にマッチ\n",
+        ":invalid 無効な状態の <input> のような要素に一致\n",
+        ":lang 言語（HTML lang属性の値）に基づいて要素を照合\n",
+        ":last-child グループの中で最後にある要素に一致\n",
+        "いまここ\n",
+        ":last-of-type グループの中で最後にある特定のタイプに一致\n",
+        ":left 左側のページと一致\n",
+        ":link 未訪問のリンクに一致\n",
+        ":local-link 現在のドキュメントと同じサイトにあるページを指すリンクに一致\n",
+        ":is() 渡されたセレクターリスト内の任意のセレクターに一致\n",
+        ":not このセレクターに値として渡されるセレクターで一致しないものと一致\n",
+        ":nth-​​child グループのリストの要素に一致\n",
+        ":nth-​​of-type 特定のタイプのグループ（ <p> 要素など）のリストの要素に一致\n",
+        ":nth-​​last-child グループのリストの要素を末尾から逆に数えて一致\n",
+        ":nth-​​last-of-type 特定のタイプのグループのリスト（ <p> 要素など）の要素を最後から逆に数えて一致\n",
+        ":only-child グループがない要素に一致\n",
+        ":only-of-type グループ間でそのタイプの唯一の要素である要素に一致\n",
+        ":optional 不要なフォーム要素に一致\n",
+        ":out-of-range 範囲制限を持つ要素で、要素の値が範囲外にある場合にマッチ\n",
+        ":past 現在の要素より前の要素に一致\n",
+        ":placeholder-shown プレースホルダーテキストを表示しているinput要素に一致\n",
+        ":playing オーディオ、ビデオ、が「再生中」のときに一致\n",
+        ":paused オーディオ、ビデオ、が「一時停止」のときに一致\n",
+        ":read-only ユーザーが変更できない要素と一致\n",
+        ":read-write ユーザーが変更可能な要素と一致\n",
+        ":required 必要なフォーム要素に一致\n",
+        ":right 右側のページに一致\n",
+        ":root ドキュメントのルートである要素に一致\n",
+        ":scope スコープ要素であるすべての要素に一致\n",
+        ":valid <input> 要素などで要素が有効な状態のときに一致\n",
+        ":target 現在のURLのターゲットである場合（つまり、現在のURLフラグメントに一致するIDを持つ場合）、要素に一致\n",
+        ":visited 訪問したリンクに一致\n",
+        "\n",
+        "疑似要素\n",
+        "::after 元の要素の実際のコンテンツの後に現れるスタイル可能な要素\n",
+        "::before 元の要素の実際のコンテンツの前に現れるスタイル可能な要素\n",
+        "::first-letter 要素の最初の文字\n",
+        "::first-line 含まれている要素の最初の行\n",
+        "::grammar-error ブラウザによってフラグが立てられた文法エラーを含むドキュメントの一部\n",
+        "::marker 通常は箇条書きまたは番号が含まれているリストアイテムのマーカーボックス\n",
+        "::selection 選択されたドキュメントの部分\n",
+        "::spelling-error ブラウザによってフラグが付けられた、スペルミスを含むドキュメントの一部"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Oz30Tdb6yZkn"
+      },
+      "source": [
+        "# 結合子 combinator\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "id": "89rhPCSNy2cW",
+        "outputId": "380efc8d-c7b5-4e35-fd03-f32024ddcede"
+      },
+      "source": [
+        "# スペース結合子\n",
         "%%html\n",
         "<style>\n",
-        ".arrow_box {\n",
-        "\tposition: relative;\n",
-        "\tbackground: #88b7d5;\n",
-        "\tborder: 4px solid #c2e1f5;\n",
-        "}\n",
-        ".arrow_box:after, .arrow_box:before {\n",
-        "\tbottom: 100%;\n",
-        "\tleft: 50%;\n",
-        "\tborder: solid transparent;\n",
-        "\tcontent: \"\";\n",
-        "\theight: 0;\n",
-        "\twidth: 0;\n",
-        "\tposition: absolute;\n",
-        "\tpointer-events: none;\n",
-        "}\n",
-        "\n",
-        ".arrow_box:after {\n",
-        "\tborder-color: rgba(136, 183, 213, 0);\n",
-        "\tborder-bottom-color: #88b7d5;\n",
-        "\tborder-width: 30px;\n",
-        "\tmargin-left: -30px;\n",
-        "}\n",
-        ".arrow_box:before {\n",
-        "\tborder-color: rgba(194, 225, 245, 0);\n",
-        "\tborder-bottom-color: #c2e1f5;\n",
-        "\tborder-width: 36px;\n",
-        "\tmargin-left: -36px;\n",
-        "}\n",
+        "    .box p {\n",
+        "        color: red;\n",
+        "    }\n",
         "</style>\n",
-        "<article class=\"arrow_box\">\n",
-        "    <p>css arrowplease!</p>\n",
-        "    <p>css</p>\n",
-        "</article>"
+        "<div class=\"box\"><p>Text in .box</p></div>\n",
+        "<p>Text not in .box</p>"
       ],
-      "execution_count": 122,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<style>\n",
-              ".arrow_box {\n",
-              "\tposition: relative;\n",
-              "\tbackground: #88b7d5;\n",
-              "\tborder: 4px solid #c2e1f5;\n",
-              "}\n",
-              "/* .arrow_box:after, .arrow_box:before {\n",
-              "\tbottom: 100%;\n",
-              "\tleft: 50%;\n",
-              "\tborder: solid transparent;\n",
-              "\tcontent: \"\";\n",
-              "\theight: 0;\n",
-              "\twidth: 0;\n",
-              "\tposition: absolute;\n",
-              "\tpointer-events: none;\n",
-              "} */\n",
-              "\n",
-              ".arrow_box:after {\n",
-              "\tborder-color: rgba(136, 183, 213, 0);\n",
-              "\tborder-bottom-color: #88b7d5;\n",
-              "\tborder-width: 30px;\n",
-              "\tmargin-left: -30px;\n",
-              "}\n",
-              ".arrow_box:before {\n",
-              "\tborder-color: rgba(194, 225, 245, 0);\n",
-              "\tborder-bottom-color: #c2e1f5;\n",
-              "\tborder-width: 36px;\n",
-              "\tmargin-left: -36px;\n",
-              "}\n",
+              "    .box p {\n",
+              "        color: red;\n",
+              "    }\n",
               "</style>\n",
-              "<article class=\"arrow_box\">\n",
-              "    <p>css arrowplease!</p>\n",
-              "    <p>css</p>\n",
-              "</article>"
+              "<div class=\"box\"><p>Text in .box</p></div>\n",
+              "<p>Text not in .box</p>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -3308,7 +3338,7 @@
       },
       "source": [
         "# いまここ\n",
-        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Selectors/Type_Class_and_ID_Selectors"
+        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Selectors/Pseudo-classes_and_pseudo-elements"
       ]
     },
     {
