Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOrLLHvb/QCcu3ffA5wrrci",
+      "authorship_tag": "ABX9TyNjUdDBkWPdGfxEZFrXBnvl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3297,7 +3297,7 @@
         "outputId": "380efc8d-c7b5-4e35-fd03-f32024ddcede"
       },
       "source": [
-        "# スペース結合子\n",
+        "# スペース結合子 descendant combinator\n",
         "%%html\n",
         "<style>\n",
         "    .box p {\n",
@@ -3307,7 +3307,7 @@
         "<div class=\"box\"><p>Text in .box</p></div>\n",
         "<p>Text not in .box</p>"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3332,13 +3332,201 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AjlVo4zBCGgy",
+        "outputId": "2c09bae0-46a1-4950-caa1-d9bb809137c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 108
+        }
+      },
+      "source": [
+        "# child combinator\n",
+        "%%html\n",
+        "<style>\n",
+        "    ul > li {\n",
+        "        border-top: 5px solid red;\n",
+        "    }\n",
+        "</style>\n",
+        "<ul>\n",
+        "    <li>Unordered item</li>\n",
+        "    <li>Unordered item\n",
+        "        <ol>\n",
+        "            <li>Item 1</li>\n",
+        "            <li>Item 2</li>\n",
+        "        </ol>\n",
+        "    </li>"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    ul > li {\n",
+              "        border-top: 5px solid red;\n",
+              "    }\n",
+              "</style>\n",
+              "<ul>\n",
+              "    <li>Unordered item</li>\n",
+              "    <li>Unordered item\n",
+              "        <ol>\n",
+              "            <li>Item 1</li>\n",
+              "            <li>Item 2</li>\n",
+              "        </ol>\n",
+              "    </li>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G6byIPoHDHUz",
+        "outputId": "5f1068c2-2485-4507-bb00-fdf6cec4dfb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        }
+      },
+      "source": [
+        "# adjacent sibling combinator\n",
+        "%%html\n",
+        "<style>\n",
+        "    h1+p {\n",
+        "        font-weight: bold;\n",
+        "        background-color: #333;\n",
+        "        color: #fff;\n",
+        "        padding: .5em;\n",
+        "    }\n",
+        "</style>\n",
+        "<article>\n",
+        "    <h1>A heading</h1>\n",
+        "    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo\n",
+        "        melon azuki bean garlic.</p>\n",
+        "\n",
+        "    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard\n",
+        "        greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>\n",
+        "</article>"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    h1+p {\n",
+              "        font-weight: bold;\n",
+              "        background-color: #333;\n",
+              "        color: #fff;\n",
+              "        padding: .5em;\n",
+              "    }\n",
+              "</style>\n",
+              "<article>\n",
+              "    <h1>A heading</h1>\n",
+              "    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo\n",
+              "        melon azuki bean garlic.</p>\n",
+              "\n",
+              "    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard\n",
+              "        greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>\n",
+              "</article>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j0umsfHqDjZt",
+        "outputId": "1b4fdcd1-a998-49f8-80f4-0a91606a3c18",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        }
+      },
+      "source": [
+        "# general sibling combinator\n",
+        "%%html\n",
+        "<style>\n",
+        "    h1~p {\n",
+        "        font-weight: bold;\n",
+        "        background-color: #333;\n",
+        "        color: #fff;\n",
+        "        padding: .5em;\n",
+        "    }\n",
+        "</style>\n",
+        "<article>\n",
+        "    <h1>A heading</h1>\n",
+        "    <p>I am a paragraph.</p>\n",
+        "    <div>I am a div</div>\n",
+        "    <p>I am another paragraph.</p>\n",
+        "</article>"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    h1~p {\n",
+              "        font-weight: bold;\n",
+              "        background-color: #333;\n",
+              "        color: #fff;\n",
+              "        padding: .5em;\n",
+              "    }\n",
+              "</style>\n",
+              "<article>\n",
+              "    <h1>A heading</h1>\n",
+              "    <p>I am a paragraph.</p>\n",
+              "    <div>I am a div</div>\n",
+              "    <p>I am another paragraph.</p>\n",
+              "</article>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HebFRj6EELq6"
+      },
+      "source": [
+        "# ボックスモデル"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "2nhWa1BHS4qb"
       },
       "source": [
         "# いまここ\n",
-        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Selectors/Pseudo-classes_and_pseudo-elements"
+        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/The_box_model"
       ]
     },
     {
